<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="label">Krishna Consultancy</string>
    <string name="app_name">Cook My Meal</string>
    <string name="action_settings">Settings</string>
    <string name="provider_name">Recipes</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_connect">Connect</string>
    <string name="action_sync_now">Sync Now</string>
    <string name="action_auto_sync">Allow Auto Sync</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_view_recipe">ViewRecipe</string>
    <string name="title_ingredient">Ingredient : </string>
    <string name="title_method">Method : </string>
    <string name="title_nutrients">Nutrients : </string>
    <string name="title_accompaniments">Accompaniments : </string>
    <string name="title_cook_time">Cook Time : </string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="btn_search_recipe">Search</string>
    
    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>
    
</resources>
