<ScrollView 
   	xmlns:android="http://schemas.android.com/apk/res/android" 
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
    tools:context="in.co.krishnaconsultancy.ViewRecipe$PlaceholderFragment" >
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical" >
	    <ImageView
	        android:id="@+id/recipeImage"
	        android:layout_width="fill_parent"
	        android:layout_height="400dp"
	        android:layout_marginRight="6dip"
	        android:contentDescription="@string/app_name"
	        android:src="@drawable/recipe"
	        android:scaleType="fitCenter" />
	    <TextView
	        android:id="@+id/recipeName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="@style/header" />
	    <TextView
	        android:id="@+id/recipeDescription"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
   	        android:textAppearance="@style/content" />
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_ingredient"
	        android:textAppearance="@style/subheader"/>
	    <TextView
	        android:id="@+id/recipeIngredents"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
   	        android:textAppearance="@style/content" />
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_method"
	        android:textAppearance="@style/subheader"/>
   	    <TextView
	        android:id="@+id/recipeMethod"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
   	        android:textAppearance="@style/content" />
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_nutrients"
	        android:textAppearance="@style/subheader"/>
   	    <TableLayout
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content" >
   	        <TableRow
   	            android:id="@+id/tableRow1"
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content" >
   	        </TableRow>
   	        <TableRow
   	            android:id="@+id/tableRow2"
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content" >
   	        </TableRow>
   	    </TableLayout>
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_accompaniments"
	        android:textAppearance="@style/subheader"/>
	    <TextView
	        android:id="@+id/recipeAccompaniments"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
   	        android:textAppearance="@style/content" />
	</LinearLayout>
</ScrollView>
